--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,14 +15,12 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true">
+            android:layout_height="match_parent">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/dimen_20dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -30,9 +28,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dimen_20dp"
                     android:background="@drawable/login_icon"
-                    android:gravity="center"
                     android:text="@string/aadharNo"
                     android:textColor="@color/white" />
 
@@ -75,11 +71,11 @@
 
 
                 <com.cgg.pps.custom.CustomFontButtonView
-                    android:layout_marginBottom="@dimen/dimen_20dp"
                     android:id="@+id/loginBtn"
                     android:layout_width="@dimen/dimen_150dp"
                     android:layout_height="@dimen/dimen_50dp"
                     android:layout_marginTop="@dimen/dimen_20dp"
+                    android:layout_marginBottom="@dimen/dimen_20dp"
                     android:background="@drawable/btn_background1"
                     android:gravity="center"
                     android:text="@string/submit"
