--- a/app/src/main/res/layout/paddy_otp_alert.xml
+++ b/app/src/main/res/layout/paddy_otp_alert.xml
@@ -8,29 +8,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:alpha="0.5"
-            android:background="@drawable/cp_page"
-            android:gravity="center"
-            android:orientation="vertical" />
 
         <ScrollView
-            android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@drawable/rounded_corner_frame"
             android:focusableInTouchMode="true"
             android:orientation="vertical">
 
 
             <LinearLayout
-                android:padding="@dimen/dimen_10dp"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="@dimen/dimen_10dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -39,6 +33,21 @@
                     android:background="@drawable/login_icon"
                     android:gravity="center"
                     android:textColor="@color/white" />
+                
+                <com.cgg.pps.custom.CustomFontTextView
+                    android:id="@+id/mobNumTV"
+                    android:layout_marginTop="@dimen/dimen_8dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+
+                <com.cgg.pps.custom.CustomFontTextView
+                    android:id="@+id/totalAmountTV"
+                    android:layout_marginTop="@dimen/dimen_8dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
                 <com.cgg.pps.custom.CustomFontEditText
                     android:id="@+id/otpEt"
@@ -61,15 +70,15 @@
 
                 <com.cgg.pps.custom.CustomFontTextView
                     android:id="@+id/resendTv"
-                    android:layout_marginTop="@dimen/dimen_8dp"
-                    android:layout_marginLeft="@dimen/dimen_16sp"
-                    android:layout_gravity="start"
-                    android:textColor="@color/white"
-                    android:padding="@dimen/dimen_8dp"
-                    android:text="@string/resend_otp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimen_16sp" />
+                    android:layout_gravity="start"
+                    android:layout_marginStart="@dimen/dimen_16sp"
+                    android:layout_marginLeft="@dimen/dimen_16sp"
+                    android:layout_marginTop="@dimen/dimen_8dp"
+                    android:padding="@dimen/dimen_8dp"
+                    android:text="@string/resend_otp"
+                    android:textColor="@color/black" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -89,16 +98,16 @@
 
 
                     <Button
-                        android:layout_marginLeft="@dimen/dimen_8dp"
                         android:id="@+id/verifyBtn"
                         android:layout_width="@dimen/dimen_150dp"
                         android:layout_height="@dimen/dimen_50dp"
+                        android:layout_marginStart="@dimen/dimen_8dp"
+                        android:layout_marginLeft="@dimen/dimen_8dp"
                         android:background="@drawable/btn_background1"
                         android:gravity="center"
                         android:text="@string/verify_proceed"
                         android:textAllCaps="false"
-                        android:textColor="@color/white"
-                        android:layout_marginStart="@dimen/dimen_8dp" />
+                        android:textColor="@color/white" />
 
                 </LinearLayout>
 
